# apartment_booking

server/: .gitignore  pyproject.toml  render.yaml
server/app/: celery_worker.py  config.py  main.py
server/app/auth/: service.py
server/app/auth/adapters/: jwt_service.py
server/app/auth/repository/: repository.py
server/app/auth/router/: dependencies.py  router_authorize_user.py  router_get_account.py  router_get_me.py  router_logout_user.py  router_refresh_token.py  router_register_user.py
server/app/chat/: service.py
server/app/chat/adapters/: Puppeteer.py
server/app/chat/repository/: repository.py
server/app/chat/router/: router_check.py  router_delete_chat.py  router_get_database.py  router_get_messages.py  router_update_all.py  router_write_message.py
server/app/db/275cfc25-702e-4ed3-b8a6-db9d9d9837ce/: index_metadata.pickle
server/app/docs/: data.txt
server/app/notifications/: celery_config.py  schemas.py  tasks.py
server/app/parsing/: service.py
server/app/parsing/adapters/: parsing.py
server/app/parsing/repository/: repository.py
server/app/parsing/router/: router_generate_txt.py  router_parse_data.py
server/app/shanyraks/: service.py
server/app/shanyraks/repository/: repository.py
server/app/shanyraks/router/: router_create_shanyrak.py  router_delete_shanyrak.py  router_get_shanyrak_by_id.py  router_update_shanyrak.py
server/app/tweets/: service.py
server/app/tweets/repository/: repository.py
server/app/tweets/router/: router_create_tweet.py  router_delete_tweet.py  router_get_my_tweets.py  router_is_favorite.py
(+39 files in other folders)
